--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="h-full" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -8,8 +8,12 @@
   %sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
-  <div class="p-8">%sveltekit.body%</div>
+<body class="flex flex-col min-h-full" data-sveltekit-preload-data="hover">
+  <div class="flex-1 gap-4 flex flex-col">
+    <main class="px-8" id="main-content">
+      %sveltekit.body%
+    </main>
+  </div>
 </body>
 
 </html>
