--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html class="h-full" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    %sveltekit.head%
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  %sveltekit.head%
-</head>
-
-<body class="flex flex-col min-h-full" data-sveltekit-preload-data="hover">
-  <div class="flex-1 gap-4 flex flex-col">
-    %sveltekit.body%
-  </div>
-</body>
-
+  <body class="flex min-h-full flex-col" data-sveltekit-preload-data="hover">
+    <div class="flex flex-1 flex-col gap-4">%sveltekit.body%</div>
+  </body>
 </html>
