feat: Add a default title tag to the template

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
+
+    <title>Research - SvelteKit</title>
   </head>
 
   <body class="flex min-h-full flex-col" data-sveltekit-preload-data="hover">
